[gd_scene load_steps=105 format=3 uid="uid://c57oy1lqj4f43"]

[ext_resource type="Texture2D" uid="uid://c1qierq5gctoc" path="res://assets/Characters/Human/IDLE/base_idle_strip9.png" id="1_hovdd"]
[ext_resource type="Script" uid="uid://dmne7wn07b5rc" path="res://Script/player.gd" id="1_w2ep0"]
[ext_resource type="Texture2D" uid="uid://dypd114e3v8q1" path="res://assets/Characters/Human/IDLE/bowlhair_idle_strip9.png" id="2_5utgv"]
[ext_resource type="Texture2D" uid="uid://d2dymv4jhh21a" path="res://assets/Characters/Human/WALKING/base_walk_strip8.png" id="3_5srte"]
[ext_resource type="Texture2D" uid="uid://35auyjlg0akv" path="res://assets/Characters/Human/DIG/base_dig_strip13.png" id="3_e0121"]
[ext_resource type="Texture2D" uid="uid://22bw31eirxt6" path="res://assets/Characters/Human/IDLE/tools_idle_strip9.png" id="4_rrjs7"]
[ext_resource type="Texture2D" uid="uid://dashkpm5m6cvl" path="res://assets/Characters/Human/WALKING/bowlhair_walk_strip8.png" id="5_oig6r"]
[ext_resource type="Texture2D" uid="uid://c6h8gx7gecfvn" path="res://assets/Characters/Human/DIG/bowlhair_dig_strip13.png" id="6_im1mn"]
[ext_resource type="Texture2D" uid="uid://bisf33ssmgf24" path="res://assets/Characters/Human/WALKING/tools_walk_strip8.png" id="7_d4d1h"]
[ext_resource type="Texture2D" uid="uid://cg6jlogttoqkv" path="res://assets/Characters/Human/DIG/tools_dig_strip13.png" id="9_jd10u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ep0"]
atlas = ExtResource("1_hovdd")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrjs7"]
atlas = ExtResource("1_hovdd")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t3kv"]
atlas = ExtResource("1_hovdd")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5srte"]
atlas = ExtResource("1_hovdd")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oig6r"]
atlas = ExtResource("1_hovdd")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4d1h"]
atlas = ExtResource("1_hovdd")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0121"]
atlas = ExtResource("1_hovdd")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im1mn"]
atlas = ExtResource("1_hovdd")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd10u"]
atlas = ExtResource("1_hovdd")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ng8c"]
atlas = ExtResource("3_e0121")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3gsm"]
atlas = ExtResource("3_e0121")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta6qp"]
atlas = ExtResource("3_e0121")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk0w6"]
atlas = ExtResource("3_e0121")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojw2b"]
atlas = ExtResource("3_e0121")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uox0"]
atlas = ExtResource("3_e0121")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sldwm"]
atlas = ExtResource("3_e0121")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhs8r"]
atlas = ExtResource("3_e0121")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx11n"]
atlas = ExtResource("3_e0121")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy03m"]
atlas = ExtResource("3_e0121")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2kqq"]
atlas = ExtResource("3_e0121")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j0bn"]
atlas = ExtResource("3_e0121")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2ip"]
atlas = ExtResource("3_e0121")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5eyx"]
atlas = ExtResource("3_5srte")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q3ft"]
atlas = ExtResource("3_5srte")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_366rx"]
atlas = ExtResource("3_5srte")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ecoa"]
atlas = ExtResource("3_5srte")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q48bb"]
atlas = ExtResource("3_5srte")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkvft"]
atlas = ExtResource("3_5srte")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jj7p"]
atlas = ExtResource("3_5srte")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dspxq"]
atlas = ExtResource("3_5srte")
region = Rect2(672, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dkc8g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ep0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrjs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t3kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5srte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oig6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4d1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0121")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im1mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd10u")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ng8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3gsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta6qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk0w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojw2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uox0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sldwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhs8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx11n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy03m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2kqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j0bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2ip")
}],
"loop": false,
"name": &"menyekop",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5eyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q3ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_366rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ecoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q48bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkvft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jj7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dspxq")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_uovx8"]
atlas = ExtResource("2_5utgv")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7spl7"]
atlas = ExtResource("2_5utgv")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgfvl"]
atlas = ExtResource("2_5utgv")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l5uo"]
atlas = ExtResource("2_5utgv")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14p3m"]
atlas = ExtResource("2_5utgv")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k1ob"]
atlas = ExtResource("2_5utgv")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb46i"]
atlas = ExtResource("2_5utgv")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny51y"]
atlas = ExtResource("2_5utgv")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3j4c"]
atlas = ExtResource("2_5utgv")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci7vl"]
atlas = ExtResource("6_im1mn")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrpi4"]
atlas = ExtResource("6_im1mn")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fccwt"]
atlas = ExtResource("6_im1mn")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75k4"]
atlas = ExtResource("6_im1mn")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwr2n"]
atlas = ExtResource("6_im1mn")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvmd"]
atlas = ExtResource("6_im1mn")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kycr2"]
atlas = ExtResource("6_im1mn")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tml2s"]
atlas = ExtResource("6_im1mn")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5fyr"]
atlas = ExtResource("6_im1mn")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeaqh"]
atlas = ExtResource("6_im1mn")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51qmj"]
atlas = ExtResource("6_im1mn")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8rk4"]
atlas = ExtResource("6_im1mn")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiyht"]
atlas = ExtResource("6_im1mn")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mes5m"]
atlas = ExtResource("5_oig6r")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bjn4"]
atlas = ExtResource("5_oig6r")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8onqo"]
atlas = ExtResource("5_oig6r")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_my3qa"]
atlas = ExtResource("5_oig6r")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe7ey"]
atlas = ExtResource("5_oig6r")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2nv4"]
atlas = ExtResource("5_oig6r")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b5fv"]
atlas = ExtResource("5_oig6r")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_whun7"]
atlas = ExtResource("5_oig6r")
region = Rect2(672, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yu8qu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uovx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7spl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgfvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l5uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14p3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k1ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb46i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny51y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3j4c")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci7vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrpi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fccwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v75k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwr2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kycr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tml2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5fyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeaqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51qmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8rk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiyht")
}],
"loop": false,
"name": &"menyekop",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mes5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bjn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8onqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my3qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe7ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2nv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b5fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whun7")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dkc8g"]
atlas = ExtResource("4_rrjs7")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu8qu"]
atlas = ExtResource("4_rrjs7")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov0iu"]
atlas = ExtResource("4_rrjs7")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7lij"]
atlas = ExtResource("4_rrjs7")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v581"]
atlas = ExtResource("4_rrjs7")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnd47"]
atlas = ExtResource("4_rrjs7")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufmvj"]
atlas = ExtResource("4_rrjs7")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_du2bl"]
atlas = ExtResource("4_rrjs7")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbbxw"]
atlas = ExtResource("4_rrjs7")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l86m1"]
atlas = ExtResource("9_jd10u")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7h11"]
atlas = ExtResource("9_jd10u")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_430q6"]
atlas = ExtResource("9_jd10u")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5wf7"]
atlas = ExtResource("9_jd10u")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_leo1u"]
atlas = ExtResource("9_jd10u")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im6hy"]
atlas = ExtResource("9_jd10u")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqoxr"]
atlas = ExtResource("9_jd10u")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3d5h"]
atlas = ExtResource("9_jd10u")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykf4l"]
atlas = ExtResource("9_jd10u")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcxur"]
atlas = ExtResource("9_jd10u")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a75ml"]
atlas = ExtResource("9_jd10u")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmo0a"]
atlas = ExtResource("9_jd10u")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhic5"]
atlas = ExtResource("9_jd10u")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1pvm"]
atlas = ExtResource("7_d4d1h")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lsri"]
atlas = ExtResource("7_d4d1h")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5vmw"]
atlas = ExtResource("7_d4d1h")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3wi4"]
atlas = ExtResource("7_d4d1h")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetbc"]
atlas = ExtResource("7_d4d1h")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fq45"]
atlas = ExtResource("7_d4d1h")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kpah"]
atlas = ExtResource("7_d4d1h")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhw68"]
atlas = ExtResource("7_d4d1h")
region = Rect2(672, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5eyx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkc8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu8qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov0iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7lij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v581")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnd47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufmvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du2bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbbxw")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l86m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7h11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_430q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5wf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leo1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im6hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqoxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3d5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykf4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcxur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a75ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmo0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhic5")
}],
"loop": false,
"name": &"menyekop",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1pvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lsri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5vmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3wi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fq45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kpah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhw68")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w2ep0"]
radius = 4.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_w2ep0")

[node name="Body_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dkc8g")
animation = &"menyekop"

[node name="Hair_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yu8qu")
animation = &"menyekop"

[node name="Tool_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r5eyx")
animation = &"menyekop"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_w2ep0")

[node name="ShovelPoint" type="Marker2D" parent="."]
position = Vector2(12, 3)

[connection signal="animation_finished" from="Body_Sprite" to="." method="_on_body_sprite_animation_finished"]
[connection signal="animation_finished" from="Hair_Sprite" to="." method="_on_hair_sprite_animation_finished"]
[connection signal="animation_finished" from="Tool_Sprite" to="." method="_on_tool_sprite_animation_finished"]
